tree_sitter_v/grammar.js
		source_file: ($) =>
			seq(
				optional($.shebang),
				optional($.module_clause),
				optional($.import_list),
				repeat(
					choice(
						seq($._top_level_declaration, optional(terminator)),
						seq($._statement, optional(terminator)),
					),
				),
			),

		line_comment: (_) => seq('//', /.*/),

		_top_level_declaration: ($) =>
			choice(
				$.const_declaration,
				$.global_var_declaration,
				$.type_declaration,
				$.function_declaration,
				$.static_method_declaration,
				$.struct_declaration,
				$.enum_declaration,
				$.interface_declaration,
			),

		generic_parameters: ($) =>
			prec(
				PREC.resolve,
				seq(
					choice(token.immediate('['), token.immediate('<')),
					comma_sep1($.generic_parameter),
					optional(','),
					choice(']', '>'),
				),
			),

		generic_parameter: ($) => $.identifier,

		struct_declaration: ($) =>
			seq(
				optional(field('attributes', $.attributes)),
				optional($.visibility_modifiers),
				choice('struct', 'union'),
				field('name', $.identifier),
				optional(field('generic_parameters', $.generic_parameters)),
				$._struct_body,
			),

		_struct_body: ($) =>
			seq(
				'{',
				repeat(
					choice(
						seq($.struct_field_scope, optional(terminator)),
						seq($.struct_field_declaration, optional(terminator)),
					),
				),
				'}',
			),

		// pub:
		// mut:
		// pub mut:
		// __global:
		struct_field_scope: () => seq(choice('pub', 'mut', seq('pub', 'mut'), '__global'), ':'),

		struct_field_declaration: ($) => choice($._struct_field_definition, $.embedded_definition),

		_struct_field_definition: ($) =>
			prec.right(
				PREC.type_initializer,
				seq(
					field('name', $.identifier),
					field('type', $.plain_type),
					optional(seq('=', field('default_value', $._expression))),
					optional(field('attributes', $.attribute)),
				),
			),

		embedded_definition: ($) =>
			choice($.type_reference_expression, $.qualified_type, $.generic_type),

		reference_expression: ($) => prec.left($.identifier),
		type_reference_expression: ($) => prec.left($.identifier),

		literal: ($) =>
			choice(
				$.int_literal,
				$.float_literal,
				$._string_literal,
				$.rune_literal,
				$.none,
				$.true,
				$.false,
				$.nil,
			),

		true: () => 'true',
		int_literal: () => token(int_literal),

		float_literal: () => token(float_literal),

		_string_literal: ($) =>
			choice($.interpreted_string_literal, $.c_string_literal, $.raw_string_literal),

		identifier: () =>
			token(
				seq(
					optional('@'),
					optional('$'),
					optional('C.'),
					optional('JS.'),
					choice(unicode_letter, '_'),
					repeat(choice(letter, unicode_digit)),
				),
			),

		visibility_modifiers: () => prec.left(choice('pub', '__global')),

		plain_type: ($) =>
			prec.right(
				PREC.primary,
				choice($._plain_type_without_special, $.option_type, $.result_type, $.multi_return_type),
			),

		_plain_type_without_special: ($) =>
			prec.right(
				PREC.primary,
				choice(
					$.type_reference_expression,
					$.qualified_type,
					$.pointer_type,
					$.wrong_pointer_type,
					$.array_type,
					$.fixed_array_type,
					$.function_type,
					$.generic_type,
					$.map_type,
					$.channel_type,
					$.shared_type,
					$.thread_type,
					$.atomic_type,
					$.anon_struct_type,
				),
			),

		qualified_type: ($) =>
			seq(field('module', $.reference_expression), '.', field('name', $.type_reference_expression)),

		_statement: ($) =>
			choice(
				$.simple_statement,
				$.assert_statement,
				$.continue_statement,
				$.break_statement,
				$.return_statement,
				$.asm_statement,
				$.goto_statement,
				$.labeled_statement,
				$.defer_statement,
				$.for_statement,
				$.compile_time_for_statement,
				$.send_statement,
				$.block,
				$.hash_statement,
				$.append_statement,
			),

		attributes: ($) => repeat1(seq($.attribute, optional(terminator))),

		attribute: ($) =>
			seq(
				choice('[', '@['),
				seq($.attribute_expression, repeat(seq(';', $.attribute_expression))),
				']',
			),

		attribute_expression: ($) => prec(PREC.attributes, choice($.if_attribute, $._plain_attribute)),

		// [if some ?]
		// @[if some ?]
		_plain_attribute: ($) => choice($.literal_attribute, $.value_attribute, $.key_value_attribute),

		// ['/query']
		// @['/query']
		value_attribute: ($) =>
			prec(
				PREC.attributes,
				field('name', choice(alias('unsafe', $.reference_expression), $.reference_expression)),
			),

		// [key]
		// [key: value]
		// @[key]
		// @[key: value]
